# PaperPilot

./: .gitignore  README.md
paper-reader/backend/: Dockerfile  pyproject.toml
paper-reader/backend/app/: __init__.py  main.py
paper-reader/backend/app/agents/: __init__.py  base.py  chat_agent.py  coordinator.py  paper_agent.py  translation_agent.py  visual_agent.py
paper-reader/backend/app/api/: router.py  sse.py
paper-reader/backend/app/core/: config.py
paper-reader/backend/app/models/: schemas.py
paper-reader/backend/app/prompts/: __init__.py  explanation.py  guide.py
paper-reader/backend/app/services/: conversation_store.py  knowledge_base.py  learning.py  llm.py  parser.py  runtime.py  (+6 more)
paper-reader/backend/paper_reader_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paper-reader/backend/scripts/: eval_retrieval.py  generate_demo_video.py  guide_example.py  register_mineru_result.py  scan_reference_papers.py  smoke_deepseek_reference.py  smoke_mineru_reference.py  smoke_reference_papers.py  test_background_upload.py  test_deepseek_adapter.py  test_deepseek_connection.py  test_mineru_fixture.py  test_mineru_retrieval.py  test_persistence_and_delete.py
paper-reader/backend/tests/: test_bilingual_page.py  test_chat_stream.py  test_chunk_explanation.py  test_display_zones.py  test_guide_generation.py  test_health.py  test_learning_module.py  test_llm_json.py  test_llm_streaming.py  test_mineru_adapter.py  test_retrieval_chunking.py  test_text_merge.py  test_us01_upload_flow.py  test_vector_search.py  test_video_module.py  test_vision_explanation.py
(+97 files in other folders)
